Trying a fix - Removed GroupManager

--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,10 @@
           <name>libs-snapshot</name>
           <url>http://repo.bukkit.org/artifactory/libs-snapshot</url>
         </repository>
+        <repository>
+      <id>sk89q-mvn2</id>
+      <url>http://mvn2.sk89q.com/repo</url>
+    </repository>
       </repositories>
       <pluginRepositories>
         <pluginRepository>
@@ -38,32 +42,23 @@
           <name>plugins-snapshot</name>
           <url>http://repo.bukkit.org/artifactory/plugins-snapshot</url>
         </pluginRepository>
+        
       </pluginRepositories>
       <id>artifactory</id>
     </profile>
   </profiles>
   
   <dependencies>
-  <dependency>
-  	<groupId>com.anjocaido.groupmanager</groupId>
-  	<artifactId>GroupManager</artifactId>
-  	<version>1.0(alpha-5)</version>
-  	<type>jar</type>
-  </dependency>
   <!-- You don't necessarily need to depend on Permissions if you don't want to, but this is how you add a dependency -->
     <dependency>
       <groupId>com.nijikokun.bukkit</groupId>
       <artifactId>Permissions</artifactId>
-      <version>3.1.5</version>
-      <type>jar</type>
-      <scope>compile</scope>
+      <version>3.1.6</version>
     </dependency>
     <dependency>
       <groupId>org.bukkit</groupId>
       <artifactId>bukkit</artifactId>
       <version>0.0.1-SNAPSHOT</version>
-      <type>jar</type>
-      <scope>compile</scope>
     </dependency>
   </dependencies>
   <properties>
