--- a/pom.xml
+++ b/pom.xml
@@ -5,61 +5,51 @@
   <version>0.1</version>
   <name>Tickets</name>
   <url>None</url>
-  <profiles>
-    <profile>
-      <repositories>
-        <repository>
-          <snapshots>
-            <enabled>false</enabled>
-          </snapshots>
-          <id>central</id>
-          <name>libs-release</name>
-          <url>http://repo.bukkit.org/artifactory/libs-release</url>
-        </repository>
-        <repository>
-          <snapshots />
-          <id>snapshots</id>
-          <name>libs-snapshot</name>
-          <url>http://repo.bukkit.org/artifactory/libs-snapshot</url>
-        </repository>
-        <repository>
-      <id>sk89q-mvn2</id>
-      <url>http://mvn2.sk89q.com/repo</url>
-    </repository>
-      </repositories>
-      <pluginRepositories>
-        <pluginRepository>
-          <snapshots>
-            <enabled>false</enabled>
-          </snapshots>
-          <id>central</id>
-          <name>plugins-release</name>
-          <url>http://repo.bukkit.org/artifactory/plugins-release</url>
-        </pluginRepository>
-        <pluginRepository>
-          <snapshots />
-          <id>snapshots</id>
-          <name>plugins-snapshot</name>
-          <url>http://repo.bukkit.org/artifactory/plugins-snapshot</url>
-        </pluginRepository>
-        
-      </pluginRepositories>
-      <id>artifactory</id>
-    </profile>
-  </profiles>
+  <repositories>
+		<repository>
+			<id>bukkit-repo</id>
+			<snapshots>
+				<enabled>true</enabled>
+			</snapshots>
+			<releases>
+				<enabled>true</enabled>
+			</releases>
+			<url>http://artifacts.lukegb.com/artifactory/repo/</url>
+		</repository>
+		<repository>
+			<id>nexisonline-repo</id>
+			<snapshots>
+				<enabled>true</enabled>
+			</snapshots>
+			<releases>
+				<enabled>true</enabled>
+			</releases>
+			<name>Nexis Entertainment M2 Repo</name>
+			<url>http://repo.nexisonline.net:8080/nexus/content/groups/public/</url>
+		</repository>
+	</repositories>
+	<pluginRepositories>
+		<pluginRepository>
+			<id>bukkit-plugins</id>
+			<url>http://repo.bukkit.org/artifactory/plugins-release</url>
+		</pluginRepository>
+	</pluginRepositories>
   
   <dependencies>
   <!-- You don't necessarily need to depend on Permissions if you don't want to, but this is how you add a dependency -->
     <dependency>
-      <groupId>com.nijikokun.bukkit</groupId>
-      <artifactId>Permissions</artifactId>
-      <version>3.1.6</version>
-    </dependency>
-    <dependency>
-      <groupId>org.bukkit</groupId>
-      <artifactId>bukkit</artifactId>
-      <version>0.0.1-SNAPSHOT</version>
-    </dependency>
+			<!-- Grabs from Bukkit Artifactory -->
+			<groupId>org.bukkit</groupId>
+			<artifactId>bukkit</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+			<type>jar</type>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.nijikokun.bukkit</groupId>
+			<artifactId>Permissions</artifactId>
+			<version>3.1.6</version>
+		</dependency>
   </dependencies>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
