--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
 			<releases>
 				<enabled>true</enabled>
 			</releases>
-			<url>http://artifacts.lukegb.com/artifactory/repo/</url>
+			<url> http://repo.bukkit.org/artifactory/repo/</url>
 		</repository>
 		<repository>
 			<id>nexisonline-repo</id>
@@ -49,6 +49,8 @@
 			<groupId>com.nijikokun.bukkit</groupId>
 			<artifactId>Permissions</artifactId>
 			<version>3.1.6</version>
+			<type>jar</type>
+			<scope>compile</scope>
 		</dependency>
   </dependencies>
   <properties>
