--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,13 @@
 			<type>jar</type>
 			<scope>compile</scope>
 		</dependency>
+	<dependency>
+			<groupId>com.nijikokun.bukkit</groupId>
+			<artifactId>Permissions</artifactId>
+			<version>3.1.6</version>
+			<type>jar</type>
+			<scope>compile</scope>
+		</dependency>
   </dependencies>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
