--- a/pom.xml
+++ b/pom.xml
@@ -64,7 +64,7 @@
     <resource>
         <targetPath>.</targetPath>
         <filtering>true</filtering>
-        <directory>${basedir}/src/main/resources/</directory>
+        <directory>${basedir}/src/main/java/resources/</directory>
         <includes>
           <include>plugin.yml</include>
         </includes>
