--- a/pom.xml
+++ b/pom.xml
@@ -72,8 +72,16 @@
       </resources>
   
      
-     <plugins>
-     <!-- JAR creation plugin -->
+     <!-- Plugins -->
+    <plugins>
+      <!-- Compile plugin -->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>2.3.2</version>
+      </plugin>
+
+      <!-- JAR creation plugin -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-jar-plugin</artifactId>
@@ -89,7 +97,18 @@
           </archive>
         </configuration>
       </plugin>
-     <plugin>
+
+      <!-- Assembly -->
+      <plugin>
+        <artifactId>maven-assembly-plugin</artifactId>
+        <version>2.2-beta-2</version>
+        <configuration>
+          <descriptor>${basedir}/src/main/assembly/default.xml</descriptor>
+        </configuration>
+      </plugin>
+
+      <!-- Release -->
+      <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-release-plugin</artifactId>
         <version>2.1</version>
@@ -98,7 +117,7 @@
           <goals>assembly:assembly</goals>
         </configuration>
       </plugin>
-     </plugins>
+    </plugins>
      </build>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
