--- a/pom.xml
+++ b/pom.xml
@@ -59,16 +59,16 @@
   </dependencies>
   
   <build>
-    <sourceDirectory>${basedir}/src/main/java</sourceDirectory>
+    <sourceDirectory>src/main/java</sourceDirectory>
      <resources>
-    <resource>
-        <targetPath>.</targetPath>
-        <filtering>true</filtering>
-        <directory>${basedir}/src/main/resources/</directory>
-        <includes>
-          <include>plugin.yml</include>
-        </includes>
-      </resource>
+     	<resource>
+        	<targetPath>.</targetPath>
+        	<filtering>true</filtering>
+        	<directory>src/main/resources/</directory>
+        	<includes>
+          		<include>plugin.yml</include>
+        	</includes>
+     	</resource>
       </resources>
   
      
