--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,7 @@
 
 	<build>
 		<sourceDirectory>${basedir}/src/main/java</sourceDirectory>
+		<finalName>${project.name}</finalName>
 		<resources>
 			<resource>
 				<targetPath>.</targetPath>
@@ -96,25 +97,6 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-jar-plugin</artifactId>
 				<version>2.3.1</version>
-				<configuration>
-					<archive>
-						<addMavenDescriptor>true</addMavenDescriptor>
-						<pomPropertiesFile>true</pomPropertiesFile>
-						<manifest>
-							<addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
-							<addDefaultImplementationEntries>true</addDefaultImplementationEntries>
-						</manifest>
-					</archive>
-				</configuration>
-			</plugin>
-
-			<!-- Assembly -->
-			<plugin>
-				<artifactId>maven-assembly-plugin</artifactId>
-				<version>2.2-beta-2</version>
-				<configuration>
-					<descriptor>${basedir}/src/main/assembly/default.xml</descriptor>
-				</configuration>
 			</plugin>
 
 			<!-- Release -->
