--- a/pom.xml
+++ b/pom.xml
@@ -85,7 +85,7 @@
 
 		<!-- Plugins -->
 		<plugins>
-			<plugin>
+<!--  			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>2.3.2</version>
@@ -98,7 +98,7 @@
 					<showWarnings>true</showWarnings>
 					<optimize>true</optimize>
 				</configuration>
-			</plugin>
+			</plugin>-->
 			<plugin>
                <groupId>org.codehaus.mojo</groupId>
                 <artifactId>build-helper-maven-plugin</artifactId>
