--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,13 @@
 			<type>jar</type>
 			<scope>compile</scope>
 		</dependency>
+		<dependency>
+			<groupId>cosine</groupId>
+			<artifactId>boseconomy</artifactId>
+			<version>6.2</version>
+			<type>jar</type>
+			<scope>compile</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
