Adding # in build number

--- a/src/main/ressources/plugin.yml
+++ b/src/main/ressources/plugin.yml
@@ -1,6 +1,6 @@
 name: Tickets
 main: com.lebelw.Tickets.Tickets
-version: 0.5 (${env.BUILD_NUMBER})
+version: 0.5 (#${env.BUILD_NUMBER})
 commands:
     ticket:
         description: Take care of the tickets
