--- a/pom.xml
+++ b/pom.xml
@@ -42,8 +42,6 @@
 	</pluginRepositories>
 
 	<dependencies>
-		<!-- You don't necessarily need to depend on Permissions if you don't want 
-			to, but this is how you add a dependency -->
 		<dependency>
 			<!-- Grabs from Bukkit Artifactory -->
 			<groupId>org.bukkit</groupId>
@@ -88,6 +86,24 @@
 				</includes>
 			</resource>
 		</resources>
+		<plugins>
+      <plugin>
+        <groupId>com.lukegb.mojo</groupId>
+        <artifactId>gitdescribe-maven-plugin</artifactId>
+        <version>1.3</version>
+        <configuration>
+          <outputPrefix>git-Tickets-</outputPrefix>
+          <outputPostfix></outputPostfix>
+        </configuration>
+        <executions>
+          <execution>
+            <phase>compile</phase>
+            <goals>
+              <goal>gitdescribe</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
 	</build>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
