--- a/pom.xml
+++ b/pom.xml
@@ -104,6 +104,7 @@
           </execution>
         </executions>
       </plugin>
+	  </plugins>
 	</build>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
