--- a/pom.xml
+++ b/pom.xml
@@ -88,21 +88,14 @@
 		</resources>
 		<plugins>
       <plugin>
-        <groupId>com.lukegb.mojo</groupId>
-        <artifactId>gitdescribe-maven-plugin</artifactId>
-        <version>1.3</version>
+        <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>2.0.2</version>
         <configuration>
-          <outputPrefix>git-Tickets-</outputPrefix>
-          <outputPostfix></outputPostfix>
+          <source>1.5</source>
+          <target>1.5</target>
         </configuration>
-        <executions>
-          <execution>
-            <phase>compile</phase>
-            <goals>
-              <goal>gitdescribe</goal>
-            </goals>
-          </execution>
-        </executions>
       </plugin>
 	  </plugins>
 	</build>
